--- a/index.html
+++ b/index.html
@@ -5,8 +5,102 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <a>
+        <h2>Техномарт</h2>
+      </a>
+      <p>
+        Поиск
+        <!--Тут будет форма-->
+      </p>
+      <ul>
+        <li><a href="#">Закладки</a></li>
+        <li><a href="#">Корзина</a></li>
+        <li><a href="#">Оформить заказ</a></li>
+      </ul>
+      <p>
+        Интернет-магазин строительных материалов и инструментов для ремонта
+      </p>
+      <div>
+        <p>+7(812)555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </div>
+      <div>
+        <button type="button">Войти</button>
+        <button type="button">Регистрация</button>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h3>Компания "Техномарт"</h3>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:</p>
+          <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a href="#">Подробнее о компании</a>
+      </section>
+      <section>
+        <h3>Контакты</h3>
+        <p>Вы можете забрать товар сами,<br>
+          заехав в наш офис:</p>
+        <a href="#"><img src="map.jpg" alt="Карта"></a>
+        <a href="#">Заблудились? Напишите нам!</a>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <a>
+          <h2>Техномарт</h2>
+        </a>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          +7(812)555-05-55</p>
+          <ul>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструмент</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+          </ul>
+      </section>
+      <section>
+          <p>2010-2017 Компания "Техномарт"<br>
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            +7(812)555-05-55</p>
+            <ul>
+              <li><a href="#">Вконтакте</a></li>
+              <li><a href="#">Фейсбук</a></li>
+              <li><a href="#">Инстаграм</a></li>
+            </ul>
+            <p>
+              Обратная связь:<br>
+              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p>Разработано -<br>
+              <a href="#">htmlacademy.ru</a>
+            </p>
+      </section>
+    </footer>
   </body>
 </html>
