переименовал hummerdrill.html в catalog.html, добавил ссылки на главную и каталог

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -60,7 +60,7 @@
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
         <a href="#"><img src="map.jpg" alt="Карта"></a>
-        <a href="#">Заблудились? Напишите нам!</a>
+        <a href="mailto:mail@htmlacademy.ru">Заблудились? Напишите нам!</a>
       </section>
     </main>
     <footer>
@@ -73,7 +73,7 @@
           <ul>
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
