Добавил заглушки где должны быть иконки, заменил часть кода, если пользователь залогиниться

--- a/catalog.html
+++ b/catalog.html
@@ -14,20 +14,24 @@
         <!--Тут будет форма-->
       </p>
       <ul>
-        <li><a href="#">Закладки</a></li>
-        <li><a href="#">Корзина</a></li>
+        <li><a href="#"><img src="bookmarks.svg" alt="Закладки">Закладки: 0</a></li>
+        <li><a href="#"><img src="basket.svg" alt="Корзина">Корзина: 10</a></li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
       <p>
         Интернет-магазин строительных материалов и инструментов для ремонта
       </p>
       <div>
-        <p>+7(812)555-05-55</p>
+        <p><img src="phone.svg" alt="телефон">+7(812)555-05-55</p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <div>
-        <button type="button">Войти</button>
-        <button type="button">Регистрация</button>
+        <a href="account.html"><img src="account.svg" alt="Аккаунт">Равшан Джамшутович</a>
+        <a href="#"><img src="logout.svg" alt="Выход"></a>
+        <ul>
+          <li><a href="#">Мои заказы</a></li>
+          <li><a href="account.html">Личный кабинет</a></li>
+        </ul>
       </div>
       <nav>
         <ul>
@@ -62,8 +66,7 @@
         <ul>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 3000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
             </h3>
             <p>
               <a href="#">
@@ -79,8 +82,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 6000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
             </h3>
             <p>
               <a href="#">
@@ -96,8 +98,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 2000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
             </h3>
             <img src="#"alt="Новинка">
             <p>
@@ -110,8 +111,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 3000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
             </h3>
             <p>
               <a href="#">
@@ -127,8 +127,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 6000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
             </h3>
             <img src="#"alt="Новинка">
             <p>
@@ -145,8 +144,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 2000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
             </h3>
             <p>
               <a href="#">
@@ -159,8 +157,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 3000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
             </h3>
             <img src="#"alt="Новинка">
             <p>
@@ -177,8 +174,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 6000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
             </h3>
             <p>
               <a href="#">
@@ -194,8 +190,7 @@
           </li>
           <li>
             <h3>
-              <a href="#">Перфоратор BOSCH<br>
-              BFG 2000</a>
+              <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
             </h3>
             <p>
               <a href="#">
