--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
         <h2>Техномарт</h2>
       </a>
       <p>
+        <img src="search.svg">
         Поиск
         <!--Тут будет форма-->
       </p>
       <ul>
-        <li><a href="#">Закладки</a></li>
-        <li><a href="#">Корзина</a></li>
+        <li><a href="#"><img src="bookmarks.svg" alt="Закладки">Закладки: 0</a></li>
+        <li><a href="#"><img src="basket.svg" alt="Корзина">Корзина: 0</a></li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
       <p>
         Интернет-магазин строительных материалов и инструментов для ремонта
       </p>
       <div>
-        <p>+7(812)555-05-55</p>
+        <p><img src="phone.svg" alt="телефон">+7(812)555-05-55</p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <div>
