Дополнил код (красные области задания на 80%), сделал более удобочитаемый код в списках

--- a/catalog.html
+++ b/catalog.html
@@ -55,6 +55,8 @@
       </ul>
       <section>
         <h2>Фильтр товаров</h2>
+        <p>Фильтр:</p>
+        <!--Тут будет форма-->
         <p>Производители:</p>
         <!--Тут будет форма-->
         <p>Питание:</p>
@@ -63,143 +65,103 @@
       </section>
       <section>
         <h2>Список товара</h2>
+        <div>
+          <p>Сортировка</p>
+
+
+          <!--Тут нужно будет доделать-->
+
+          
+        </div>
         <ul>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 3000">
               </a>
             </p>
-            <p>
-              <del>22500 Р.</del>
-            </p>
-            <p>
-              15500 Р.
-            </p>
+            <p><del>22500 Р.</del></p>
+            <p>15500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 6000">
               </a>
             </p>
-            <p>
-              <del>30500 Р.</del>
-            </p>
-            <p>
-              25500 Р.
-            </p>
+            <p><del>30500 Р.</del></p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <img src="#"alt="Новинка">
             <p>
               <button type="button">Купить</button>
               <button type="button">В закладки</button>
             </p>
-            <p>
-              15500 Р.
-            </p>
+            <p>15500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 3000">
               </a>
             </p>
-            <p>
-              <del>22500 Р.</del>
-            </p>
-            <p>
-              15500 Р.
-            </p>
+            <p><del>22500 Р.</del></p>
+            <p>15500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <img src="#"alt="Новинка">
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 6000">
               </a>
             </p>
-            <p>
-              <del>30500 Р.</del>
-            </p>
-            <p>
-              25500 Р.
-            </p>
+            <p><del>30500 Р.</del></p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 2000">
               </a>
             </p>
-            <p>
-              12500 Р.
-            </p>
+            <p>12500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <img src="#"alt="Новинка">
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 3000">
               </a>
             </p>
-            <p>
-              <del>22500 Р.</del>
-            </p>
-            <p>
-              15500 Р.
-            </p>
+            <p><del>22500 Р.</del></p>
+            <p>15500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 6000">
               </a>
             </p>
-            <p>
-              <del>30500 Р.</del>
-            </p>
-            <p>
-              25500 Р.
-            </p>
+            <p><del>30500 Р.</del></p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <h3>
-              <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-            </h3>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <p>
               <a href="#">
                 <img src="#"alt="Перфоратор BOSCH BFG 2000">
               </a>
             </p>
-            <p>
-              12500 Р.
-            </p>
+            <p>12500 Р.</p>
           </li>
         </ul>
       </section>
