--- a/index.html
+++ b/index.html
@@ -44,6 +44,127 @@
     </header>
     <main>
       <section>
+        <h2>Промо-блок</h2>
+        <ul>
+          <li>
+            <h4>Материалы</h4>
+            <img src="#"alt="Новинка">
+            <img src="#" alt="Материалы">
+            <a href="#">На любой вкус</a>
+          </li>
+          <li>
+            <h4>Инструмент</h4>
+            <img src="#" alt="Инструмент">
+            <a href="#">На все случаи</a>
+          </li>
+          <li>
+            <h4>Техника</h4>
+            <img src="#" alt="Техника">
+            <a href="#">Для стройки</a>
+          </li>
+          <li>
+            <h4>Дрели</h4>
+            <p>Соседям на радость!</p>
+            <img src="#" alt="Дрели">
+            <a href="catalog.html">Открыть каталог</a>
+            <button type="button"><img src="back.svg" alt="Назад"></button>
+            <button type="button"><img src="forvard.svg" alt="Вперед"></button>
+          </li>
+          <li>
+            <h4>Скидки 50%</h4>
+            <img src="#" alt="Скидки">
+            <a href="#">На 350 товаров</a>
+          </li>
+          <li>
+            <h4>Доставка</h4>
+            <img src="#" alt="Доставка">
+            <a href="#">Бесплатно</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <div>
+          <h2>Популярные товары:</h2>
+          <a href="#">Все популярные товары</a>
+        </div>
+        <ul>
+          <li>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h3>
+            <p>
+              <a href="#">
+                <img src="#"alt="Перфоратор BOSCH BFG 9000">
+              </a>
+            </p>
+            <p><del>32500 Р.</del></p>
+            <p>25500 Р.</p>
+          </li>
+          <li>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
+            <p>
+              <a href="#">
+                <img src="#"alt="Перфоратор BOSCH BFG 3000">
+              </a>
+            </p>
+            <p><del>22500 Р.</del></p>
+            <p>15500 Р.</p>
+          </li>
+          <li>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
+            <p>
+              <a href="#">
+                <img src="#"alt="Перфоратор BOSCH BFG 6000">
+              </a>
+            </p>
+            <p><del>30500 Р.</del></p>
+            <p>25500 Р.</p>
+          </li>
+          <li>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
+            <img src="#"alt="Новинка">
+            <p>
+              <a href="#">
+                <img src="#"alt="Перфоратор BOSCH BFG 2000">
+              </a>
+            </p>
+            <p>12500 Р.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <div>
+          <h2>Популярные производители:</h2>
+          <a href="#">Все производители</a>
+        </div>
+        <ul>
+          <li><a href="#"><img src="bosch-logo.jpg" alt="BOSCH"></a></li>
+          <li><a href="#"><img src="makita-logo.jpg" alt="Makita"></a></li>
+          <li><a href="#"><img src="dewalt-logo.jpg" alt="DeWALT"></a></li>
+          <li><a href="#"><img src="interskol-logo.jpg" alt="Интерскол"></a></li>
+          <li><a href="#"><img src="hitachi-logo.jpg" alt="Hitachi"></a></li>
+          <li><a href="#"><img src="lg-logo.jpg" alt="LG"></a></li>
+          <li><a href="#"><img src="aeg-logo.jpg" alt="AEG"></a></li>
+          <li><a href="#"><img src="metabo-logo.jpg" alt="Metabo"></a></li>
+        </ul>
+      </section>
+      <section>
+        <div>
+          <h2>Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Кредит</a></li>
+          </ul>
+          <h2>Доставка</h2>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          <img src="#" alt="Доставка">
+        </div>
+      </section>
+      <section>
         <h3>Компания "Техномарт"</h3>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
