--- a/catalog.html
+++ b/catalog.html
@@ -26,8 +26,10 @@
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <div>
-        <a href="account.html"><img src="account.svg" alt="Аккаунт">Равшан Джамшутович</a>
-        <a href="#"><img src="logout.svg" alt="Выход"></a>
+        <p>
+        <a href="account.html">Равшан Джамшутович</a>
+        <a href="#">Выход</a>
+        </p>
         <ul>
           <li><a href="#">Мои заказы</a></li>
           <li><a href="account.html">Личный кабинет</a></li>
@@ -47,13 +49,13 @@
     </header>
     <main>
       <h1>Перфораторы</h1>
-      <ul>
+      <ul class="breadcrumbs">
         <li><a href="index.html"><img src="home.svg" alt="Главная"></a></li>
         <li><a href="#">Каталлог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li>Перфораторы</li>
       </ul>
-      <section>
+      <aside>
         <h2>Фильтр товаров</h2>
         <p>Фильтр:</p>
         <!--Тут будет форма-->
@@ -62,16 +64,18 @@
         <p>Питание:</p>
         <!--Тут будет форма-->
         <button type="button">Показать</button>
-      </section>
+      </aside>
+      <div>
       <section>
         <h2>Список товара</h2>
         <div>
           <p>Сортировка</p>
 
 
-          <!--Тут нужно будет доделать-->
+          <!--Тут нужно будет доделать
+          Два списка из ссылок-->
 
-          
+
         </div>
         <ul>
           <li>
@@ -97,9 +101,11 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <img src="#"alt="Новинка">
+
+            <!--Добавить в каждый товар-->
             <p>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
             </p>
             <p>15500 Р.</p>
           </li>
@@ -164,46 +170,66 @@
             <p>12500 Р.</p>
           </li>
         </ul>
+        <ul class="pagination">
+          <li><a>1</a></li>
+          <li><a href="">2</a></li>
+          <li><a href="">3</a></li>
+          <li><a href="">Следующая</a></li>
+        </ul>
+      </section>
+      <section>
+
+
+<!--Вставить текст-->
+
+
+
+        <h2>tjfhkjfgkjhku</h2>
+        <p>hjfhtfhjbgk</p>
       </section>
     </main>
-    <footer>
-      <section>
-        <a href="index.html">
-          <h2>Техномарт</h2>
-        </a>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          +7(812)555-05-55</p>
-          <ul>
-            <li><a href="#">Компания</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-          <ul>
-            <li><a href="#">Материалы</a></li>
-            <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструмент</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-          </ul>
-      </section>
-      <section>
-          <p>2010-2017 Компания "Техномарт"<br>
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            +7(812)555-05-55</p>
-            <ul>
-              <li><a href="#">Вконтакте</a></li>
-              <li><a href="#">Фейсбук</a></li>
-              <li><a href="#">Инстаграм</a></li>
-            </ul>
-            <p>
-              Обратная связь:<br>
-              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </p>
-            <p>Разработано -<br>
-              <a href="#">htmlacademy.ru</a>
-            </p>
-      </section>
-    </footer>
+  <footer>
+    <div>
+      <div>
+        <a>
+          <img src="#"">Техномарт</h2>
+      </a>
+      <ul>
+        <li><a href=" #">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>
+          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+          <a href="tel:+78125550555">+7(812)555-05-55</a>
+        </p>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <p>2010-2017 Компания "Техномарт"<span>Все права защищены</span></p>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+      <p>
+        Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p>Разработано -
+        <a href="#">htmlacademy.ru</a>
+      </p>
+    </div>
+  </footer>
   </body>
 </html>
