Добавил разметку. Добавил  слайды и ссылки Купить/В закладки

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 <body>
   <header>
-    <h1>Техномарт</h1>
     <div>
       <a>
         <img src="#" alt="Техномарт">
@@ -69,6 +68,12 @@
             <h4>Дрели</h4>
             <p>Соседям на радость!</p>
             <img src="#" alt="Дрели">
+            <a href="catalog.html">Открыть каталог</a>
+          </div>
+          <div class="slide">
+            <h4>Перфораторы</h4>
+            <p>Настоящие мужские игрушки</p>
+            <img src="#" alt="Перфораторы">
             <a href="catalog.html">Открыть каталог</a>
           </div>
         </div>
@@ -174,6 +179,19 @@
           <h2>Доставка</h2>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
             Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+        </div>
+        <div>
+          <h2>Гарантия</h2>
+          <p>Если купленный у нас товар поломается или заискрит,
+            а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии.
+            Мы обменяем сгоревший товар на новый.
+            Дом уж восстановите как-нибудь сами.</p>
+          <div>
+            <h2>Кредит</h2>
+            <p>Залезть в долговую яму стало проще!
+              Кредитные консультанты придут вам на помощь.</p>
+            <a href="">Отправить заявку</a>
+          </div>
         </div>
       </div>
     </section>
