--- a/catalog.html
+++ b/catalog.html
@@ -6,25 +6,27 @@
   </head>
   <body>
     <header>
+      <div>
       <a href="index.html">
-        <h2>Техномарт</h2>
+        <img src="#" alt="Техномарт">
       </a>
-      <p>
-        Поиск
-        <!--Тут будет форма-->
-      </p>
+      <form>
+        <input type="search" placeholder="Поиск">
+      </form>
       <ul>
-        <li><a href="#"><img src="bookmarks.svg" alt="Закладки">Закладки: 0</a></li>
-        <li><a href="#"><img src="basket.svg" alt="Корзина">Корзина: 10</a></li>
+        <li><a href="#">Закладки: 0</a></li>
+        <li><a href="#">Корзина: 0</a></li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
-      <p>
-        Интернет-магазин строительных материалов и инструментов для ремонта
-      </p>
-      <div>
-        <p><img src="phone.svg" alt="телефон">+7(812)555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </div>
+    </div>
+    <div>
+        <p>
+          Интернет-магазин строительных материалов и инструментов для ремонта
+        </p>
+        <div>
+          <a href="tel:+78125550555">+7(812)555-05-55</a>
+          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+        </div>
       <div>
         <p>
         <a href="account.html">Равшан Джамшутович</a>
@@ -35,11 +37,12 @@
           <li><a href="account.html">Личный кабинет</a></li>
         </ul>
       </div>
+    </div>
       <nav>
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
+          <li><a>Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -50,7 +53,7 @@
     <main>
       <h1>Перфораторы</h1>
       <ul class="breadcrumbs">
-        <li><a href="index.html"><img src="home.svg" alt="Главная"></a></li>
+        <li><a href="index.html">Главная</a></li>
         <li><a href="#">Каталлог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li>Перфораторы</li>
@@ -70,12 +73,15 @@
         <h2>Список товара</h2>
         <div>
           <p>Сортировка</p>
-
-
-          <!--Тут нужно будет доделать
-          Два списка из ссылок-->
-
-
+          <ul>
+            <li><a href="">По цене</a></li>
+            <li><a href="">По типу</a></li>
+            <li><a href="">По функционалу</a></li>
+          </ul>
+          <ul>
+            <li><a href="">Вниз</a></li>
+            <li><a href="">Вверх</a></li>
+          </ul>
         </div>
         <ul>
           <li>
@@ -87,27 +93,33 @@
             </p>
             <p><del>22500 Р.</del></p>
             <p>15500 Р.</p>
-          </li>
-          <li>
-            <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
-            <p>
-              <a href="#">
-                <img src="#"alt="Перфоратор BOSCH BFG 6000">
-              </a>
-            </p>
-            <p><del>30500 Р.</del></p>
-            <p>25500 Р.</p>
-          </li>
-          <li>
-            <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
-            <img src="#"alt="Новинка">
-
-            <!--Добавить в каждый товар-->
             <p>
               <a href="">Купить</a>
               <a href="">В закладки</a>
             </p>
+          </li>
+          <li>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
+            <p>
+              <a href="#">
+                <img src="#"alt="Перфоратор BOSCH BFG 6000">
+              </a>
+            </p>
+            <p><del>30500 Р.</del></p>
+            <p>25500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
+          </li>
+          <li>
+            <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
+            <img src="#"alt="Новинка">
             <p>15500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
@@ -118,6 +130,10 @@
             </p>
             <p><del>22500 Р.</del></p>
             <p>15500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
@@ -129,6 +145,10 @@
             </p>
             <p><del>30500 Р.</del></p>
             <p>25500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
@@ -149,6 +169,10 @@
             </p>
             <p><del>22500 Р.</del></p>
             <p>15500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
@@ -159,6 +183,10 @@
             </p>
             <p><del>30500 Р.</del></p>
             <p>25500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
@@ -168,6 +196,10 @@
               </a>
             </p>
             <p>12500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
         </ul>
         <ul class="pagination">
@@ -177,15 +209,13 @@
           <li><a href="">Следующая</a></li>
         </ul>
       </section>
-      <section>
-
-
-<!--Вставить текст-->
-
-
-
-        <h2>tjfhkjfgkjhku</h2>
-        <p>hjfhtfhjbgk</p>
+        <h2>Пара слов о перфораторах</h2>
+        <p>
+          Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления
+          отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы.
+          Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном
+          ряду есть выбор "трехжимников":в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p>
       </section>
     </main>
   <footer>
@@ -216,7 +246,7 @@
       </div>
     </div>
     <div>
-      <p>2010-2017 Компания "Техномарт"<span>Все права защищены</span></p>
+      <p>2010-2017 Компания "Техномарт" <span>Все права защищены</span></p>
       <ul>
         <li><a href="#">Вконтакте</a></li>
         <li><a href="#">Фейсбук</a></li>
