--- a/catalog.html
+++ b/catalog.html
@@ -115,6 +115,11 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <img src="#"alt="Новинка">
+            <p>
+              <a href="#">
+                <img src="#"alt="Перфоратор BOSCH BFG 2000">
+              </a>
+            </p>
             <p>15500 Р.</p>
             <p>
               <a href="">Купить</a>
