--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
@@ -8,8 +9,8 @@
 <body>
   <header>
     <div>
-      <a>
-        <img src="#" alt="Техномарт">
+      <a style="padding: 10px; background-color: red">
+        <img src="img\logo-technomart.svg" width="109px" height="19px" alt="Техномарт">
       </a>
       <form>
         <input type="search" placeholder="Поиск">
@@ -66,18 +67,18 @@
           <div class="slide">
             <h4>Дрели</h4>
             <p>Соседям на радость!</p>
-            <img src="#" alt="Дрели">
+            <img src="img\slider-drills.jpg" width="620px" height="266px" alt="Дрели">
             <a href="catalog.html">Открыть каталог</a>
           </div>
           <div class="slide">
             <h4>Перфораторы</h4>
             <p>Настоящие мужские игрушки</p>
-            <img src="#" alt="Перфораторы">
+            <img src="img\slider-perfs.jpg" width="620px" height="266px" alt="Перфораторы">
             <a href="catalog.html">Открыть каталог</a>
           </div>
         </div>
-        <button type="button"><img src="back.svg" alt="Назад"></button>
-        <button type="button"><img src="forvard.svg" alt="Вперед"></button>
+        <button type="button"><img src="img\icon-left.svg" alt="Назад"></button>
+        <button type="button"><img src="img\icon-right.svg" alt="Вперед"></button>
       </div>
       <ul>
         <li>
@@ -108,41 +109,57 @@
           <h3><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h3>
           <p>
             <a href="#">
-              <img src="#" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img\item-bfg9000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 9000">
             </a>
           </p>
           <p><del>32500 Р.</del></p>
           <p>25500 Р.</p>
+          <p>
+            <a href="">Купить</a>
+            <a href="">В закладки</a>
+          </p>
         </li>
         <li>
           <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
           <p>
             <a href="#">
-              <img src="#" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img\item-bfg3000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
             </a>
           </p>
           <p><del>22500 Р.</del></p>
           <p>15500 Р.</p>
+          <p>
+            <a href="">Купить</a>
+            <a href="">В закладки</a>
+          </p>
         </li>
         <li>
           <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
           <p>
             <a href="#">
-              <img src="#" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img\item-bfg6000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
             </a>
           </p>
           <p><del>30500 Р.</del></p>
           <p>25500 Р.</p>
+          <p>
+            <a href="">Купить</a>
+            <a href="">В закладки</a>
+          </p>
         </li>
         <li>
           <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
           <img src="#" alt="Новинка">
           <p>
             <a href="#">
-              <img src="#" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img\item-bfg2000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
             </a>
           </p>
           <p>12500 Р.</p>
+          <p>
+            <a href="">Купить</a>
+            <a href="">В закладки</a>
+          </p>
         </li>
       </ul>
     </section>
@@ -152,14 +169,14 @@
         <a href="#">Все производители</a>
       </div>
       <ul>
-        <li><a href="#"><img src="bosch-logo.jpg" alt="BOSCH"></a></li>
-        <li><a href="#"><img src="makita-logo.jpg" alt="Makita"></a></li>
-        <li><a href="#"><img src="dewalt-logo.jpg" alt="DeWALT"></a></li>
-        <li><a href="#"><img src="interskol-logo.jpg" alt="Интерскол"></a></li>
-        <li><a href="#"><img src="hitachi-logo.jpg" alt="Hitachi"></a></li>
-        <li><a href="#"><img src="lg-logo.jpg" alt="LG"></a></li>
-        <li><a href="#"><img src="aeg-logo.jpg" alt="AEG"></a></li>
-        <li><a href="#"><img src="metabo-logo.jpg" alt="Metabo"></a></li>
+        <li><a href="#"><img src="img\bosch.png" width="126px" height="37px" alt="BOSCH"></a></li>
+        <li><a href="#"><img src="img\makita.png" width="123px" height="40px" alt="Makita"></a></li>
+        <li><a href="#"><img src="img\DeWALT.png" width="146px" height="44px" alt="DeWALT"></a></li>
+        <li><a href="#"><img src="img\interskol.png" width="200px" height="88px" alt="Интерскол"></a></li>
+        <li><a href="#"><img src="img\Hitachi.png" width="169px" height="31px" alt="Hitachi"></a></li>
+        <li><a href="#"><img src="img\LG.png" width="121px" height="73px" alt="LG"></a></li>
+        <li><a href="#"><img src="img\AEG.png" width="151px" height="96px" alt="AEG"></a></li>
+        <li><a href="#"><img src="img\Metabo.png" width="204px" height="69px" alt="Metabo"></a></li>
       </ul>
     </section>
     <section>
@@ -212,7 +229,7 @@
         <h3>Контакты</h3>
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <a href="#"><img src="map.jpg" alt="Карта"></a>
+        <a href="#"><img src="img\map.jpg" alt="Карта"></a>
         <a href="mailto:mail@htmlacademy.ru">Заблудились? Напишите нам!</a>
       </section>
     </div>
@@ -220,15 +237,15 @@
   <footer>
     <div>
       <div>
-        <a>
-          <img src="#"">Техномарт</h2>
-      </a>
-      <ul>
-        <li><a href=" #">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
+        <a style="padding: 10px; background-color: red">
+          <img src="img\logo-technomart.svg" width="109px" height="19px" alt="Техномарт">
+        </a>
+        <ul>
+          <li><a href=" #">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </div>
       <div>
@@ -261,4 +278,5 @@
     </div>
   </footer>
 </body>
+
 </html>
