--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header>
       <div>
       <a href="index.html" style="padding: 10px; background-color: red">
-        <img src="img\logo-technomart.svg" width="109px" height="19px" alt="Техномарт">
+        <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
       <form>
         <input type="search" placeholder="Поиск">
@@ -88,7 +88,7 @@
             <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <p>
               <a href="#">
-                <img src="img\item-bfg3000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
             </p>
             <p><del>22500 Р.</del></p>
@@ -102,7 +102,7 @@
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <p>
               <a href="#">
-                <img src="img\item-bfg6000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
             </p>
             <p><del>30500 Р.</del></p>
@@ -117,7 +117,7 @@
             <img src="#"alt="Новинка">
             <p>
               <a href="#">
-                <img src="img\item-bfg2000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </a>
             </p>
             <p>15500 Р.</p>
@@ -130,7 +130,7 @@
             <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <p>
               <a href="#">
-                <img src="img\item-bfg3000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
             </p>
             <p><del>22500 Р.</del></p>
@@ -145,7 +145,7 @@
             <img src="#"alt="Новинка">
             <p>
               <a href="#">
-                <img src="img\item-bfg6000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
             </p>
             <p><del>30500 Р.</del></p>
@@ -159,7 +159,7 @@
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <p>
               <a href="#">
-                <img src="img\item-bfg2000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </a>
             </p>
             <p>12500 Р.</p>
@@ -169,7 +169,7 @@
             <img src="#"alt="Новинка">
             <p>
               <a href="#">
-                <img src="img\item-bfg3000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
             </p>
             <p><del>22500 Р.</del></p>
@@ -183,7 +183,7 @@
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <p>
               <a href="#">
-                <img src="img\item-bfg6000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
             </p>
             <p><del>30500 Р.</del></p>
@@ -197,7 +197,7 @@
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <p>
               <a href="#">
-                <img src="img\item-bfg2000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </a>
             </p>
             <p>12500 Р.</p>
@@ -227,7 +227,7 @@
     <div>
       <div>
         <a style="padding: 10px; background-color: red">
-          <img src="img\logo-technomart.svg" width="109px" height="19px" alt="Техномарт">
+          <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
       <ul>
         <li><a href=" #">Компания</a></li>
