--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div>
       <a style="padding: 10px; background-color: red">
-        <img src="img\logo-technomart.svg" width="109px" height="19px" alt="Техномарт">
+        <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
       <form>
         <input type="search" placeholder="Поиск">
@@ -67,13 +67,13 @@
           <div class="slide">
             <h4>Дрели</h4>
             <p>Соседям на радость!</p>
-            <img src="img\slider-drills.jpg" width="620px" height="266px" alt="Дрели">
+            <img src="img\slider-drills.jpg" width="620" height="266" alt="Дрели">
             <a href="catalog.html">Открыть каталог</a>
           </div>
           <div class="slide">
             <h4>Перфораторы</h4>
             <p>Настоящие мужские игрушки</p>
-            <img src="img\slider-perfs.jpg" width="620px" height="266px" alt="Перфораторы">
+            <img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">
             <a href="catalog.html">Открыть каталог</a>
           </div>
         </div>
@@ -109,7 +109,7 @@
           <h3><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h3>
           <p>
             <a href="#">
-              <img src="img\item-bfg9000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </a>
           </p>
           <p><del>32500 Р.</del></p>
@@ -123,7 +123,7 @@
           <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
           <p>
             <a href="#">
-              <img src="img\item-bfg3000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </a>
           </p>
           <p><del>22500 Р.</del></p>
@@ -137,7 +137,7 @@
           <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
           <p>
             <a href="#">
-              <img src="img\item-bfg6000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </a>
           </p>
           <p><del>30500 Р.</del></p>
@@ -152,7 +152,7 @@
           <img src="#" alt="Новинка">
           <p>
             <a href="#">
-              <img src="img\item-bfg2000.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </a>
           </p>
           <p>12500 Р.</p>
@@ -169,14 +169,14 @@
         <a href="#">Все производители</a>
       </div>
       <ul>
-        <li><a href="#"><img src="img\bosch.png" width="126px" height="37px" alt="BOSCH"></a></li>
-        <li><a href="#"><img src="img\makita.png" width="123px" height="40px" alt="Makita"></a></li>
-        <li><a href="#"><img src="img\DeWALT.png" width="146px" height="44px" alt="DeWALT"></a></li>
-        <li><a href="#"><img src="img\interskol.png" width="200px" height="88px" alt="Интерскол"></a></li>
-        <li><a href="#"><img src="img\Hitachi.png" width="169px" height="31px" alt="Hitachi"></a></li>
-        <li><a href="#"><img src="img\LG.png" width="121px" height="73px" alt="LG"></a></li>
-        <li><a href="#"><img src="img\AEG.png" width="151px" height="96px" alt="AEG"></a></li>
-        <li><a href="#"><img src="img\Metabo.png" width="204px" height="69px" alt="Metabo"></a></li>
+        <li><a href="#"><img src="img\bosch.png" width="126" height="37" alt="BOSCH"></a></li>
+        <li><a href="#"><img src="img\makita.png" width="123" height="40" alt="Makita"></a></li>
+        <li><a href="#"><img src="img\DeWALT.png" width="146" height="44" alt="DeWALT"></a></li>
+        <li><a href="#"><img src="img\interskol.png" width="200" height="88" alt="Интерскол"></a></li>
+        <li><a href="#"><img src="img\Hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
+        <li><a href="#"><img src="img\LG.png" width="121" height="73" alt="LG"></a></li>
+        <li><a href="#"><img src="img\AEG.png" width="151" height="96" alt="AEG"></a></li>
+        <li><a href="#"><img src="img\Metabo.png" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
     <section>
@@ -229,7 +229,7 @@
         <h3>Контакты</h3>
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <a href="#"><img src="img\map.jpg" alt="Карта"></a>
+        <a href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
         <a href="mailto:mail@htmlacademy.ru">Заблудились? Напишите нам!</a>
       </section>
     </div>
@@ -238,7 +238,7 @@
     <div>
       <div>
         <a style="padding: 10px; background-color: red">
-          <img src="img\logo-technomart.svg" width="109px" height="19px" alt="Техномарт">
+          <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
         </a>
         <ul>
           <li><a href=" #">Компания</a></li>
