--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
       <ul>
         <li><a href="#"><img src="img\bosch.png" width="126" height="37" alt="BOSCH"></a></li>
         <li><a href="#"><img src="img\makita.png" width="123" height="40" alt="Makita"></a></li>
-        <li><a href="#"><img src="img\DeWALT.png" width="146" height="44" alt="DeWALT"></a></li>
+        <li><a href="#"><img src="img\dewalt.png" width="146" height="44" alt="DeWALT"></a></li>
         <li><a href="#"><img src="img\interskol.png" width="200" height="88" alt="Интерскол"></a></li>
-        <li><a href="#"><img src="img\Hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
-        <li><a href="#"><img src="img\LG.png" width="121" height="73" alt="LG"></a></li>
-        <li><a href="#"><img src="img\AEG.png" width="151" height="96" alt="AEG"></a></li>
-        <li><a href="#"><img src="img\Metabo.png" width="204" height="69" alt="Metabo"></a></li>
+        <li><a href="#"><img src="img\hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
+        <li><a href="#"><img src="img\lg.png" width="121" height="73" alt="LG"></a></li>
+        <li><a href="#"><img src="img\aeg.png" width="151" height="96" alt="AEG"></a></li>
+        <li><a href="#"><img src="img\metabo.png" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
     <section>
