Добавил формы, попапы, убрал ссылки с картинок товара, добавил классы для спрятанных заголовков

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a style="padding: 10px; background-color: red">
         <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
-      <form>
+      <form action="https://echo.htmlacademy.ru" method="post">
         <input type="search" placeholder="Поиск">
       </form>
       <ul>
@@ -48,30 +48,30 @@
   </header>
   <main>
     <section>
-      <h2>Промо-блок</h2>
+      <h2 class="visually-hidden">Промо-блок</h2>
       <div>
         <ul>
           <li>
-            <h4>Материалы</h4>
+            <h3>Материалы</h3>
             <img src="#" alt="Новинка">
             <img src="#" alt="Материалы">
             <a href="#">На любой вкус</a>
           </li>
           <li>
-            <h4>Инструмент</h4>
+            <h3>Инструмент</h3>
             <img src="#" alt="Инструмент">
             <a href="#">На все случаи</a>
           </li>
         </ul>
         <div class="slider">
           <div class="slide">
-            <h4>Дрели</h4>
+            <h3>Дрели</h3>
             <p>Соседям на радость!</p>
             <img src="img\slider-drills.jpg" width="620" height="266" alt="Дрели">
             <a href="catalog.html">Открыть каталог</a>
           </div>
           <div class="slide">
-            <h4>Перфораторы</h4>
+            <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">
             <a href="catalog.html">Открыть каталог</a>
@@ -82,18 +82,18 @@
       </div>
       <ul>
         <li>
-          <h4>Техника</h4>
+          <h3>Техника</h3>
           <img src="#" alt="Техника">
           <a href="#">Для стройки</a>
         </li>
 
         <li>
-          <h4>Скидки 50%</h4>
+          <h3>Скидки 50%</h3>
           <img src="#" alt="Скидки">
           <a href="#">На 350 товаров</a>
         </li>
         <li>
-          <h4>Доставка</h4>
+          <h3>Доставка</h3>
           <img src="#" alt="Доставка">
           <a href="#">Бесплатно</a>
         </li>
@@ -106,11 +106,9 @@
       </div>
       <ul>
         <li>
-          <h3><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h3>
+          <h4><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
           <p>
-            <a href="#">
-              <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
-            </a>
+            <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
           </p>
           <p><del>32500 Р.</del></p>
           <p>25500 Р.</p>
@@ -120,11 +118,9 @@
           </p>
         </li>
         <li>
-          <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
+          <h4><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
           <p>
-            <a href="#">
-              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-            </a>
+            <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
           <p><del>22500 Р.</del></p>
           <p>15500 Р.</p>
@@ -134,11 +130,9 @@
           </p>
         </li>
         <li>
-          <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
+          <h4><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
           <p>
-            <a href="#">
-              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-            </a>
+            <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           </p>
           <p><del>30500 Р.</del></p>
           <p>25500 Р.</p>
@@ -148,12 +142,10 @@
           </p>
         </li>
         <li>
-          <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
+          <h4><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <img src="#" alt="Новинка">
           <p>
-            <a href="#">
-              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-            </a>
+            <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           </p>
           <p>12500 Р.</p>
           <p>
@@ -230,7 +222,7 @@
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
         <a href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
-        <a href="mailto:mail@htmlacademy.ru">Заблудились? Напишите нам!</a>
+        <a href="">Заблудились? Напишите нам!</a>
       </section>
     </div>
   </main>
@@ -277,6 +269,31 @@
       </p>
     </div>
   </footer>
+  <section>
+    <h2 class="visually-hidden">Обратная связь</h2>
+    <p>Введите свой логин и пароль.</p>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <div>
+        <label for="name">Ваше имя:</label>
+        <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+      </div>
+      <div>
+        <label for="email">Ваш e-mail:</label>
+        <input id="email" type="email" name="email" placeholder="email@example.com">
+      </div>
+      <div>
+        <label for="textform">Текст письма:</label>
+        <textarea id="textform" type="comment" name="letter" placeholder="В свободной форме"></textarea>
+      </div>
+      <button type="submit">Отправить</button>
+    </form>
+    <button type="button">Закрыть</button>
+  </section>
+  <section>
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <img src="img\map-full.jpg" width="940" height="446" alt="Большая карта">
+    <button type="button">Закрыть</button>
+  </section>
 </body>
 
 </html>
