--- a/catalog.html
+++ b/catalog.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-    <header>
-      <div>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
+
+<body>
+  <header>
+    <div>
       <a href="index.html" style="padding: 10px; background-color: red">
         <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
@@ -20,17 +22,17 @@
       </ul>
     </div>
     <div>
-        <p>
-          Интернет-магазин строительных материалов и инструментов для ремонта
-        </p>
-        <div>
-          <a href="tel:+78125550555">+7(812)555-05-55</a>
-          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
-        </div>
+      <p>
+        Интернет-магазин строительных материалов и инструментов для ремонта
+      </p>
+      <div>
+        <a href="tel:+78125550555">+7(812)555-05-55</a>
+        <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+      </div>
       <div>
         <p>
-        <a href="account.html">Равшан Джамшутович</a>
-        <a href="#">Выход</a>
+          <a href="account.html">Равшан Джамшутович</a>
+          <a href="#">Выход</a>
         </p>
         <ul>
           <li><a href="#">Мои заказы</a></li>
@@ -38,39 +40,76 @@
         </ul>
       </div>
     </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a>Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h1>Перфораторы</h1>
-      <ul class="breadcrumbs">
+    <nav>
+      <ul>
         <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Каталлог</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li>Перфораторы</li>
+        <li><a href="#">Компания</a></li>
+        <li><a>Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
-      <aside>
-        <h2>Фильтр товаров</h2>
-        <p>Фильтр:</p>
-        <!--Тут будет форма-->
-        <p>Производители:</p>
-        <!--Тут будет форма-->
-        <p>Питание:</p>
-        <!--Тут будет форма-->
-        <button type="button">Показать</button>
-      </aside>
-      <div>
+    </nav>
+  </header>
+  <main>
+    <h1>Перфораторы</h1>
+    <ul class="breadcrumbs">
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="#">Каталлог</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li>Перфораторы</li>
+    </ul>
+    <aside>
+      <h2 class="visually-hidden">Фильтр товаров</h2>
+      <p>Фильтр:</p>
+      <form action="https://echo.htmlacademy.ru" method="post" oninput="pricehigh.value=price.value">
+        <div>
+          <h4>Цена</h4>
+          <input id="price" type="range" min="0" max="40000" step="10" value="30000">
+          <output name="pricelow">0</output> -
+          <output name="pricehigh">30000</output>
+        </div>
+        <div>
+          <h4>Производители:</h4>
+          <div>
+            <input id="bosch" type="checkbox" name="bosch" checked>
+            <label for="bosch">BOSCH</label>
+          </div>
+          <div>
+            <input id="interskol" type="checkbox" name="interskol">
+            <label for="interskol">ИНТЕРСКОЛ</label>
+          </div>
+          <div>
+            <input id="makita" type="checkbox" name="makita" checked>
+            <label for="makita">MAKITA</label>
+          </div>
+          <div>
+            <input id="dewalt" type="checkbox" name="dewalt">
+            <label for="bosch">DEWALT</label>
+          </div>
+          <div>
+            <input id="hitachi" type="checkbox" name="hitachi">
+            <label for="bosch">HITACHI</label>
+          </div>
+        </div>
+        <div>
+          <h4>Питание</h4>
+          <div>
+            <input id="accum" type="radio" name="supply" value="accum" checked>
+            <label for="accum">Аккумуляторные</label>
+          </div>
+          <div>
+            <input id="network" type="radio" name="supply" value="network">
+            <label for="network">Сетевые</label>
+          </div>
+        </div>
+        <button type="submit">Показать</button>
+      </form>
+    </aside>
+    <div>
       <section>
-        <h2>Список товара</h2>
+        <h2 class="visually-hidden">Список товаров</h2>
         <div>
           <p>Сортировка</p>
           <ul>
@@ -87,9 +126,7 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <p>
-              <a href="#">
-                <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-              </a>
+              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </p>
             <p><del>22500 Р.</del></p>
             <p>15500 Р.</p>
@@ -101,9 +138,7 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <p>
-              <a href="#">
-                <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-              </a>
+              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </p>
             <p><del>30500 Р.</del></p>
             <p>25500 Р.</p>
@@ -114,11 +149,9 @@
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
-            <img src="#"alt="Новинка">
+            <img src="#" alt="Новинка">
             <p>
-              <a href="#">
-                <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-              </a>
+              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </p>
             <p>15500 Р.</p>
             <p>
@@ -129,9 +162,7 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
             <p>
-              <a href="#">
-                <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-              </a>
+              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </p>
             <p><del>22500 Р.</del></p>
             <p>15500 Р.</p>
@@ -142,11 +173,9 @@
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
-            <img src="#"alt="Новинка">
+            <img src="#" alt="Новинка">
             <p>
-              <a href="#">
-                <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-              </a>
+              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </p>
             <p><del>30500 Р.</del></p>
             <p>25500 Р.</p>
@@ -158,19 +187,19 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <p>
-              <a href="#">
-                <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-              </a>
+              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </p>
             <p>12500 Р.</p>
+            <p>
+              <a href="">Купить</a>
+              <a href="">В закладки</a>
+            </p>
           </li>
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h3>
-            <img src="#"alt="Новинка">
+            <img src="#" alt="Новинка">
             <p>
-              <a href="#">
-                <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-              </a>
+              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </p>
             <p><del>22500 Р.</del></p>
             <p>15500 Р.</p>
@@ -182,9 +211,7 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h3>
             <p>
-              <a href="#">
-                <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-              </a>
+              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </p>
             <p><del>30500 Р.</del></p>
             <p>25500 Р.</p>
@@ -196,9 +223,7 @@
           <li>
             <h3><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h3>
             <p>
-              <a href="#">
-                <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-              </a>
+              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </p>
             <p>12500 Р.</p>
             <p>
@@ -214,27 +239,27 @@
           <li><a href="">Следующая</a></li>
         </ul>
       </section>
-        <h2>Пара слов о перфораторах</h2>
-        <p>
-          Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления
-          отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы.
-          Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном
-          ряду есть выбор "трехжимников":в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-        </p>
+      <h2>Пара слов о перфораторах</h2>
+      <p>
+        Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления
+        отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы.
+        Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном
+        ряду есть выбор "трехжимников":в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+      </p>
       </section>
-    </main>
+  </main>
   <footer>
     <div>
       <div>
-        <a style="padding: 10px; background-color: red">
+        <a href="index.html" style="padding: 10px; background-color: red">
           <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
-      </a>
-      <ul>
-        <li><a href=" #">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
+        </a>
+        <ul>
+          <li><a href=" #">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </div>
       <div>
@@ -266,5 +291,14 @@
       </p>
     </div>
   </footer>
-  </body>
+  <section>
+    <p>Товар добавлен в корзину!</p>
+    <div>
+      <a href="">Оформить заказ</a>
+      <button type="button">Продолжить покупки</button>
+    </div>
+    <button type="button">Закрыть</button>
+  </section>
+</body>
+
 </html>
