--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <input type="search" placeholder="Поиск">
+        <input type="search" placeholder="Поиск">                                 <!--НЕ ПРИВЯЗАН <label>-->
       </form>
       <ul>
         <li><a href="#">Закладки: 0</a></li>
@@ -256,9 +256,9 @@
     <div>
       <p>2010-2017 Компания "Техномарт"<span>Все права защищены</span></p>
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
       </ul>
       <p>
         Обратная связь:
